tests/paczka1/small_fuzzy/18087595.err
Error in line 11: RtvlaiJ2Wy A227 64,2
Error in line 13: i4Q29 A227 30,9
